# just-lists

./: .gitignore  Cargo.toml  README.md  publish.sh
docs/: demo.tape  golden.ascii
just-lists-core/: Cargo.toml
just-lists-core/src/: lib.rs  list.rs  list_item.rs
src/: app.rs  main.rs
tests/: end_to_end.rs
