[package]
name = "just-lists"
version = "0.2.3"
edition = "2024"
license = "MIT"
keywords = ["task-manager", "ratatui", "terminal-ui", "lists"]
categories = ["command-line-utilities"]
description = "A terminal-based task manager using ratatui for managing lists of tasks."
repository = "https://github.com/betsegaw/just-lists"

[workspace]

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
color-eyre = "0.6.5"
crossterm = "0.29.0"
just-lists-core = { path = "just-lists-core", version = "0.2.0" }
ratatui = { version = "0.29.0", features = ["all-widgets"] }
textwrap = "0.16.2"

[[bin]]
name = "jl"
path = "src/main.rs"
